<resources>
    <string name="app_name">MoneyGuardian</string>
    <string name="PagosConjuntos">Pagos conjuntos</string>
    <string name="Amigos">Amigos</string>
    <string name="nombrePagoConjunto">Pagos Conjuntos</string>
    <string name="FechaPago">Fecha del pago</string>
    <string name="PagoConjuntoCosteHint">Coste del pago conjunto</string>
    <string name="FechaPagoConjunto">Fecha pago conjunto</string>
    <string name="AñadirPagoConjunto">Añadir nuevo pago conjunto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_lista_de_amigos">Lista de amigos</string>
    <string name="nuevo_amigo">Nuevo amigo</string>
    <string name="nuevo_grupo_amigos">Nuevo grupo</string>
    <string name="titulo_grupos_de_amigos">Grupos de amigos</string>
    <string name="amigo">amigo</string>
    <string name="nombreGrupo">nombre del grupo</string>
    <string name="participantesGrupo">user1, user2, user 3, user 4, user 5, user 6, user 7, user 8, user 9, user 10</string>
    <string name="NuevoItemPago">Crear nuevo item</string>
    <string name="NuevoPagoConjunto">Nuevo Pago Conjunto</string>
    <string name="nombre">Nombre</string>
    <string name="NombrePagoConjunto">Nombre pago conjunto</string>
    <string name="IconoPagoConjunto">Icono del pago conjunto</string>
    <string name="Opcional">(Opcional)</string>
    <string name="Seleccionarr">Seleccionar</string>
    <string name="UsuariosNuevoPagoConjunto">Participantes</string>
    <string name="Añadir">Añadir\n</string>
    <string name="Crear">Crear</string>
    <string name="ErrorNombreVacio">El nombre no puede estar vacío</string>
    <string name="PagoConjuntoCreado">El pago se ha creado</string>
    <string name="FechaLimite">Fecha límite para pagar</string>
    <string name="AñadirFecha">Añadir Fecha</string>
    <string name="ErrorFechaVacia">Se debe elegir una fecha límite</string>
    <string name="formListaPagosName">Nombre del Item de Pago</string>
    <string name="acceptBtn">Aceptar</string>
    <string name="formListaPagosCantidadTotal">Cantidad Total: </string>
    <string name="formListaPagosHintCantidadTotal">Total</string>
    <string name="TVPagador">Escoja la Persona que ha Pagado:</string>
    <string name="changeMoneyPerPerson">Editar Cantidad por Persona</string>
    <string name="dialog_title">Seleccione al menos un usuario para crear el item.</string>
    <string name="creteItemPago">¿Esta seguro de que quiere crear el item de pago?</string>
    <string name="notAllPay">El dinero pagado no coincide con el total. Por favor ajuste las cantidades de cada usuario.</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enter_password">Escribe tu contraseña</string>
    <string name="enter_email">Introduce tu email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signin">SignInActivity</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="error_empty_mail">El correo no puede estar vacío</string>
    <string name="error_password_empty">La contraseña no puede estar vacía</string>
    <string name="error_password_length">La contraseña ha de tener al menos 6 caracteres</string>
    <string name="singin_correcto">Cuenta creada</string>
    <string name="signin_error">Algo ha ido mal, reintentelo más tarde</string>
    <string name="signin">Registrarse</string>
    <string name="error_singin">Correo o contraseña incorrectos, intentelo de nuevo</string>
    <string name="error_singin_google">Error al iniciar sesión con Google</string>
    <string name="default_web_client_id">881426924975-djg99gp6ebn09tlgf6bnpjmdd27s85ma.apps.googleusercontent.com</string>
    <string name="logout">Cerrar sesión</string>
    <string name="error_singin_usedMail">El correo usado ya está registrado</string>
    <string name="error_db_add_user">Error al registrar al usuario</string>
    <string name="edit_reestablecer">Reestablecer</string>
    <string name="error_update_username">Error al actualizar el nombre</string>
    <string name="ok_update_username">Nombre de usuario cambiado</string>
    <string name="error_update_username_alredyUsed">Username no disponible</string>
    <string name="error_upload_user_image">Error al cargar la nueva imagen</string>
    <string name="ok_update_profilePicture">Foto de perfil cambiada con exito</string>
    <string name="error_update_profilePicture">Error al actualizar la imagen de perfil, intentelo de nuevo</string>
    <string name="default_profilePicture"><![CDATA[https://firebasestorage.googleapis.com/v0/b/moneguardian-app.appspot.com/o/users%2Fdefault.jpg?alt=media&token=17124997-ff7c-4894-a86b-f04e190b4614]]></string>
    <string name="registrar_ingreso">Registrar ingreso</string>
    <string name="registrar_gasto">Registrar gasto</string>
    <string name="title_tips">Aprende a cómo manejar tu dinero</string>
    <string name="body_tips">Con estos consejos puedes gestionar de forma mucho más eficiente tu capital.</string>
    <string name="home_menu">Home</string>
    <string name="lista_menu">Lista</string>
    <string name="amigos_menu">Amigos</string>
    <string name="pagos_conjuntos_menu">Pagos conjuntos</string>
    <string name="titulo_seccion_amigos">Amigos</string>
    <string name="search_label_friends">Busca amigos</string>
    <string name="search_hint">Buscar usuarios</string>
    <string name="moneyGuardian">MoneyGuardian</string>
    <string name="gestionar_amigos">Gestionar amigos</string>
    <string name="msg_friend_request_sent_to">Solicitud de amistad enviada a \'%1$s\'</string>
    <string name="no_friend_requests">No tienes solicitudes de amistad</string>
    <string name="hint_search_friends">Busca un nombre de usuario</string>
    <string name="tus_solicitudes">Tus solicitudes</string>
    <string name="send_friend_request">Envía una solicitud</string>
    <string name="no_friends_msg">Aún no tienes amigos, ve a \'Gestionar amigos\' y envía una solicitud de amistad</string>
    <string name="question_remove_friend">¿Desea eliminar este amigo?</string>
    <string name="confirm_remove_friend">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="no_groups_msg">No perteneces a ningún grupo, pulsa \'Nuevo grupo\' para crear tu primer grupo</string>
    <string name="moneyguardian">MoneyGuardian</string>
    <string name="error_upload_pago_image">Se ha producido un error al intentar subir la imagen.</string>
    <string name="ErrorBaseDatosPago">Se ha producido un error intentando obtener el Pago</string>
    <string name="ErrorBaseDatosAmigos">Se ha producido un error intentando obtener los amigos del usuario.</string>
    <string name="ContentDescriptionAddGasto">Añadir nuevo gasto</string>
    <string name="NombreGasto">Nombre de la transacción</string>
    <string name="Cantidad">Cantidad</string>
    <string name="CrearGasto">Crear nueva transacción</string>
    <string name="addIngreso">Añadir nuevo ingreso</string>
    <string name="addGasto">Añadir nuevo gasto</string>
    <string name="title_linear_graph">Histórico</string>
    <string name="title_pie_graph">Por categorías</string>
    <string name="graph_legend_gastos">Gastos</string>
    <string name="graph_legend_ingresos">Ingresos</string>
    <string name="description_line_graph">Gastos/Ingresos</string>
    <string name="error_empty_name">El nombre no puede estar vacío</string>
    <string name="error_empty_balance">El balance no puede estar vacío</string>
    <string name="SelectAll">Seleccionar todos</string>
    <string name="no_gasto_selected">No hay ningún gasto seleccionado</string>
    <string name="question_remove_gasto">¿Desea borrar estos gastos?</string>
    <string name="filter_1month">1M</string>
    <string name="filter_3month">3M</string>
    <string name="filter_1year">1Y</string>
    <string name="filter_all">Todo</string>
    <string name="noDataChart">Aún no tienes gastos/ingresos, registra alguno para poder ver gráficas en esta seccion</string>
    <string name="center_pie_chart">Gastos por categoría</string>
    <string name="fecha">Fecha</string>
    <string name="tituloListaPagos">Lista del Balance</string>
    <string name="googleBtn">Google</string>
    <string name="loginBtnText">Login</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="noDataChart_gastos">Aún no tienes gastos registrados. Introduce nuevos gastos para ver la división por categoría.</string>
    <string name="no_se_puede_crear_un_pago_en_conjunto_tu_solo">No se puede crear un pago en conjunto tu solo</string>
    <string name="deleteQuestion">¿Esta de seguro que quiere eliminarlo?</string>
    <string name="noDataChart_ingresos">Aún no tienes ingresos registrados. Introduce nuevos ingresos para ver la división por categoría.</string>
    <string name="title_pie_graph_gastos">Gastos</string>
    <string name="title_pie_graph_ingresos">Ingresos</string>
    <string name="center_pie_chart_ingresos">Ingresos por categoría</string>
    <string name="title_estadisticas">Estadisticas</string>
    <string name="stats_balance_titulo">Balance de este mes</string>
    <string name="ListaDeudas">Lista de deudas</string>
    <string name="no_gastos">No tienes ningún gasto/ingreso todavía, añade alguno para poder verlos aquí.</string>
    <string name="Categoria">Categoría</string>
    <string name="nombreGastoNuevo">Nombre del gasto\n</string>
    <string name="nombreIngresoNuevo">Nombre del ingreso</string>
    <string name="no_deudas">No tienes ninguna deuda pendiente con ningún usuario.</string>
    <string name="stats_balance_masQueElMesPasado">%1$.2f€ más que \n el mes pasado</string>
    <string name="stats_balance_menosQueElMesPasado">%1$.2f€ menos que \n el mes pasado</string>
    <string name="title_barChart">Balance</string>
    <string name="pagada_parte_pregunta">¿Quiere marcar su parte del pago como pagada?</string>
    <string name="error_sin_conexion">El dispositivo no está conectado a la red</string>
    <string name="error_singin_google_noAccountOnDevice">No se ha encontrado ninguna cuenta de Google en el dispositivo para iniciar sesión</string>
    <string name="ListaGastos">Lista de gastos</string>
    <string name="no_items_pago">No tiene ningún item en el pago en conjunto añada uno</string>
    <string name="no_pago_conjunto">No tiene ningún pago puede aladir uno con el boton de \'Añadir nuevo pago conjunto\'</string>
    <string name="item_del_pago_title">Item del Pago</string>
    <string name="item_ya_pagado_desc">Item ya pagado</string>
    <string name="items_seleccionados_to_delete">Items Seleccionados</string>
    <string name="delete_selected_item">¿Quiere eliminar el item seleccionado?</string>
    <string name="delete_selected_items_plural">¿Quiere eliminar los items seleccionados?</string>
</resources>