<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutFormularioPagoConjunto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textViewNuevoPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/NuevoPagoConjunto"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <TextView
            android:id="@+id/textViewNuevoNombrePagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/editTextNombrePagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/NombrePagoConjunto"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewFechaMaxPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/FechaLimite" />

        <EditText
            android:id="@+id/editFechaMaximaPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/AñadirFecha"
            android:inputType="date"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewFotoNuevoPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/IconoPagoConjunto" />

        <ImageView
            android:id="@+id/imagePreviewNuevoPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/buttonSeleccionarImagenNuevoPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Seleccionarr"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <TextView
            android:id="@+id/textViewParticipantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/UsuariosNuevoPagoConjunto" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listUsuariosNuevoPagoConjunto"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCrearNuevoPagoConjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/Crear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
