<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentListaAmigos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaAmigosFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloFragmentAmigos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_seccion_amigos"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloListaGrupos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_grupos_de_amigos"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNuevoGrupoAmigos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nuevo_grupo_amigos" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListaGruposAmigos"
            android:layout_width="match_parent"
            android:layout_height="275dp" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloListaAmigos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_lista_de_amigos"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNuevoAmigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nuevo_amigo" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListaAmigos"
            android:layout_width="match_parent"
            android:layout_height="275dp" />

    </LinearLayout>
</FrameLayout>