<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="48dp"
        android:layout_height="72dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreGrupo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ellipsize="end"
            android:maxLines="1"/>

        <!--Evitamos que sea más largo que la pantalla con los 2 ultimos items-->
        <TextView
            android:id="@+id/listaParticipantes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/participantesGrupo"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:ellipsize="end"
            android:maxLines="1"
            />

    </LinearLayout>

</LinearLayout>