<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgViewPagoConjunto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_money"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextNombrePagoConjuntoLinea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombrePagoConjunto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/TextFechaPagoConjuntoLinea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FechaPagoConjunto"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <TextView
            android:id="@+id/editTextPagoConjuntoCoste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:text="100€"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>