<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEliminarGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/confirm_remove_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/cbSelectAllGastos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <CheckBox
            android:id="@+id/cbSelectAllGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectAll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGastos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonOpenMenuGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            android:contentDescription="@string/ContentDescriptionAddGasto"
            android:focusable="true"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAddGasto"
            style="@style/Theme.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonOpenMenuGastos"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:clickable="false"
            android:contentDescription="@string/addGasto"
            android:focusable="true"
            android:src="@drawable/ic_money_off"
            android:tint="@color/white"
            android:visibility="invisible"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAddIngreso"
            style="@style/Theme.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonAddGasto"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:clickable="false"
            android:contentDescription="@string/addIngreso"
            android:focusable="true"
            android:src="@drawable/ic_money"
            android:tint="@color/white"
            android:visibility="invisible"
            app:backgroundTint="@color/green"
            app:maxImageSize="40dp" />
    </RelativeLayout>

</FrameLayout>
